<resources>
    <string name="app_name">Address Book</string>
    <string name="menu_item_action_settings">Settings</string>

    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_delete">Delete</string>
    <string name="hint_name_required">Name (Required)</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_street">Street</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_zip">Zip</string>

    <string name="label_name">Name:</string>
    <string name="label_email">E-Mail:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_street">Street:</string>
    <string name="label_city">City:</string>
    <string name="label_state">State:</string>
    <string name="label_zip">Zip:</string>

    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanently delete the contact</string>

    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="contact_no_added">Contact ﻿was ﻿not ﻿added ﻿due ﻿to ﻿an ﻿error</string>
    <string name="contact_added">Contact ﻿added successfully</string>
    <string name="contact_updated">Contact updated</string>
    <string name="contact_no_updated">Contact ﻿was ﻿not ﻿updated ﻿due ﻿to ﻿an ﻿error</string>

    <string name="invalid_query_uri">Invalid query Uri:</string>
    <string name="invalid_insert_uri">Invalid insert Uri:</string>
    <string name="invalid_update_uri">Invalid update Uri:</string>
    <string name="invalid_delete_uri">Invalid delete Uri:</string>
    <string name="insert_failed">Insert failed: %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_post">NewPostActivity</string>
    <string name="menu_item_search_location">Search Location</string>
    <string name="title_activity_maps">Map</string>

    <string name="permission_explanation">
         <![CDATA[
        In order to determine your location,
         the app requires permissions to retrieve data from a GPS receiver or data from cell towers or WiFi access point.
        ]]>
        </string>

    <string name="pref_header_general">General Settings</string>
    <string name="pref_title_switch_on_gps">Access to the location</string>
    <string name="pref_switch_gps_summary_on">Sending data to the location is enabled</string>
    <string name="pref_switch_gps_summary_off">Sending data to the location is disabled</string>
    <string name="confirm_message_access_location">Go to setting</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign UP</string>
    <string name="menu_item_action_logout">Log out</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>
