<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.rash1k.adressbook.MainActivity">

    <item
        android:id="@+id/action_find_location"
        android:icon="@drawable/ic_place_black_24dp"
        android:orderInCategory="1"
        android:title="@string/menu_item_search_location"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        android:orderInCategory="2"
        android:title="@string/menu_item_edit"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="3"
        android:title="@string/menu_item_delete"
        app:showAsAction="always"/>
</menu>
